# take-home-problem

./: .gitignore  CMakeLists.txt  DataPoint.cpp  DataPoint.h  ITemperatureVoltageConverter.h  LICENSE  README.md  ResultCodeEnum.h  TemperatureVoltageConverter.cpp  TemperatureVoltageConverter.h  data-point.cpp  data-point.h  main.cpp  testPoints.json
.github/workflows/: cmake.yml
src/: CMakeLists.txt  calibration_point.cpp  calibration_point.h  example_main.cpp  i_temperature_voltage_converter.h  take_home_problem.cpp  take_home_problem.h  temperature_voltage_converter.cpp  temperature_voltage_converter.h
take_home_problem/src/: CMakeLists.txt  example_main.cpp  requested_converter_interface.cpp  requested_converter_interface.h
take_home_problem/test/: CMakeLists.txt  calibration_file_location.cpp.in  calibration_file_location.h  test_take_home_problem.cpp
temperature_voltage_converter/src/: CMakeLists.txt  calibration_point_file.cpp  calibration_point_file.h  i_temperature_voltage_converter.h  temperature_voltage_converter.cpp  temperature_voltage_converter.h
temperature_voltage_converter/test/: CMakeLists.txt  LoadFileTest_InvalidFile.json  test_cases_multipoint_temperature_interpolation.cpp  test_cases_multipoint_voltage_interpolation.cpp  test_cases_voltage_interpolation.h  test_converts_voltage_to_temperature.cpp  test_file_locations.cpp.in  test_file_locations.h  test_not_enough_calibration_points.cpp
test/: CMakeLists.txt  DataSheetCalibrationPoints.json  LoadFileTest_ValidFile.json  calibration_point_file_tests.cpp  test_cases_out_of_order_calibration_points.cpp  test_cases_temperature_interpolation.h  test_cases_two_point_temperature_interpolation.cpp  test_cases_two_point_voltage_interpolation.cpp  test_converts_temperature_to_voltage.cpp  test_file_locations.cpp.in  test_file_locations.h  test_take_home_problem.cpp
